# skate3recomp-android

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.android.md  README.md
.github/scripts/: patch-rexglue-android.sh
.github/workflows/: build.yml
android-apk/: build.gradle  gradle.properties
android-apk/app/: build.gradle
android-apk/app/jni/: Android.mk  Application.mk
android-apk/app/jni/src/: main.c
android-apk/app/src/main/: AndroidManifest.xml
android-apk/app/src/main/java/org/libsdl/app/: SDLActivity.java
cmake/: ApplySkate3CodegenPatches.cmake  CodegenTargets.cmake  ExtractTitleUpdateXexp.py  RexGlue.cmake  Skate3Version.cmake
config/: skate3.example.toml  skate3_tu_functions.toml
docs/: ANDROID_STATUS.md
manifests/: eawebkit.toml.in  skate3.toml.in
src/: exception_compat.cpp  main.cpp  skate3_app_common.cpp  skate3_demo_path.cpp  skate3_demo_path.h  skate3_iso_installer.cpp  skate3_iso_installer_macos.mm  skate3_title_update_installer.cpp  skate3_version.h.in
